// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RendererActions applyAnnotation should apply annotation to caption of top level media 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "text": "some plain text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "marks": Array [
              Object {
                "type": "em",
              },
              Object {
                "type": "strong",
              },
              Object {
                "type": "underline",
              },
            ],
            "text": "more formatted text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "attrs": Object {
          "layout": "center",
          "width": 426,
          "widthType": "pixel",
        },
        "content": Array [
          Object {
            "attrs": Object {
              "alt": "568c02f0-5949-4465-8f43-e7f9b1f7ead5.png",
              "collection": "MediaServicesSample",
              "height": 500,
              "id": "6ee23984-95e4-4e9c-bff3-3723de5db792",
              "type": "file",
              "width": 500,
            },
            "type": "media",
          },
          Object {
            "content": Array [
              Object {
                "marks": Array [
                  Object {
                    "attrs": Object {
                      "annotationType": "inlineComment",
                      "id": "<<<ANNOTATION-ID>>>",
                    },
                    "type": "annotation",
                  },
                ],
                "text": "cute",
                "type": "text",
              },
              Object {
                "text": " dog",
                "type": "text",
              },
            ],
            "type": "caption",
          },
        ],
        "type": "mediaSingle",
      },
      Object {
        "attrs": Object {
          "isNumberColumnEnabled": false,
          "layout": "default",
          "localId": "709775b2-c4ad-4b47-bb63-023bfc655bb4",
          "width": 760,
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "layout": "center",
                      "width": 426,
                      "widthType": "pixel",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "alt": "catt.jpeg",
                          "collection": "MediaServicesSample",
                          "height": 1194,
                          "id": "e407b8a4-edb3-42d2-8425-7aa022c815c0",
                          "type": "file",
                          "width": 2121,
                        },
                        "type": "media",
                      },
                      Object {
                        "content": Array [
                          Object {
                            "text": "cute cat",
                            "type": "text",
                          },
                        ],
                        "type": "caption",
                      },
                    ],
                    "type": "mediaSingle",
                  },
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": undefined,
  "matchIndex": 1,
  "numMatches": 4,
  "originalSelection": "cute",
  "pos": undefined,
  "step": Object {
    "from": 41,
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 45,
  },
}
`;

exports[`RendererActions applyAnnotation should apply annotation to text with inline nodes 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "marks": Array [
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "text": "leading text",
            "type": "text",
          },
          Object {
            "attrs": Object {
              "id": "1f642",
              "shortName": ":slight_smile:",
              "text": "🙂",
            },
            "marks": Array [
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "type": "emoji",
          },
          Object {
            "attrs": Object {
              "color": "neutral",
              "localId": "48059fb1-aaf9-4838-9a25-e7c6315caf69",
              "style": "",
              "text": "status",
            },
            "marks": Array [
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "type": "status",
          },
          Object {
            "attrs": Object {
              "timestamp": "1572480000000",
            },
            "marks": Array [
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "type": "date",
          },
          Object {
            "marks": Array [
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "text": "tailing text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": Array [
    "date",
    "emoji",
    "status",
    "text",
  ],
  "matchIndex": 0,
  "numMatches": 1,
  "originalSelection": "leading texttailing text",
  "pos": undefined,
  "step": Object {
    "from": 0,
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 29,
  },
}
`;

exports[`RendererActions applyAnnotation should apply annotation to the caption of nested media 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "text": "some plain text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "marks": Array [
              Object {
                "type": "em",
              },
              Object {
                "type": "strong",
              },
              Object {
                "type": "underline",
              },
            ],
            "text": "more formatted text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "attrs": Object {
          "layout": "center",
          "width": 426,
          "widthType": "pixel",
        },
        "content": Array [
          Object {
            "attrs": Object {
              "alt": "568c02f0-5949-4465-8f43-e7f9b1f7ead5.png",
              "collection": "MediaServicesSample",
              "height": 500,
              "id": "6ee23984-95e4-4e9c-bff3-3723de5db792",
              "type": "file",
              "width": 500,
            },
            "type": "media",
          },
          Object {
            "content": Array [
              Object {
                "text": "cute dog",
                "type": "text",
              },
            ],
            "type": "caption",
          },
        ],
        "type": "mediaSingle",
      },
      Object {
        "attrs": Object {
          "isNumberColumnEnabled": false,
          "layout": "default",
          "localId": "709775b2-c4ad-4b47-bb63-023bfc655bb4",
          "width": 760,
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "layout": "center",
                      "width": 426,
                      "widthType": "pixel",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "alt": "catt.jpeg",
                          "collection": "MediaServicesSample",
                          "height": 1194,
                          "id": "e407b8a4-edb3-42d2-8425-7aa022c815c0",
                          "type": "file",
                          "width": 2121,
                        },
                        "type": "media",
                      },
                      Object {
                        "content": Array [
                          Object {
                            "text": "cute ",
                            "type": "text",
                          },
                          Object {
                            "marks": Array [
                              Object {
                                "attrs": Object {
                                  "annotationType": "inlineComment",
                                  "id": "<<<ANNOTATION-ID>>>",
                                },
                                "type": "annotation",
                              },
                            ],
                            "text": "cat",
                            "type": "text",
                          },
                        ],
                        "type": "caption",
                      },
                    ],
                    "type": "mediaSingle",
                  },
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": undefined,
  "matchIndex": 1,
  "numMatches": 2,
  "originalSelection": "cat",
  "pos": undefined,
  "step": Object {
    "from": 68,
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 71,
  },
}
`;

exports[`RendererActions applyAnnotation should apply annotation to the formatted text 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "text": "some plain text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "marks": Array [
              Object {
                "type": "em",
              },
              Object {
                "type": "strong",
              },
              Object {
                "type": "underline",
              },
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "text": "more formatt",
            "type": "text",
          },
          Object {
            "marks": Array [
              Object {
                "type": "em",
              },
              Object {
                "type": "strong",
              },
              Object {
                "type": "underline",
              },
            ],
            "text": "ed text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "attrs": Object {
          "layout": "center",
          "width": 426,
          "widthType": "pixel",
        },
        "content": Array [
          Object {
            "attrs": Object {
              "alt": "568c02f0-5949-4465-8f43-e7f9b1f7ead5.png",
              "collection": "MediaServicesSample",
              "height": 500,
              "id": "6ee23984-95e4-4e9c-bff3-3723de5db792",
              "type": "file",
              "width": 500,
            },
            "type": "media",
          },
          Object {
            "content": Array [
              Object {
                "text": "cute dog",
                "type": "text",
              },
            ],
            "type": "caption",
          },
        ],
        "type": "mediaSingle",
      },
      Object {
        "attrs": Object {
          "isNumberColumnEnabled": false,
          "layout": "default",
          "localId": "709775b2-c4ad-4b47-bb63-023bfc655bb4",
          "width": 760,
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "layout": "center",
                      "width": 426,
                      "widthType": "pixel",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "alt": "catt.jpeg",
                          "collection": "MediaServicesSample",
                          "height": 1194,
                          "id": "e407b8a4-edb3-42d2-8425-7aa022c815c0",
                          "type": "file",
                          "width": 2121,
                        },
                        "type": "media",
                      },
                      Object {
                        "content": Array [
                          Object {
                            "text": "cute cat",
                            "type": "text",
                          },
                        ],
                        "type": "caption",
                      },
                    ],
                    "type": "mediaSingle",
                  },
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": undefined,
  "matchIndex": 0,
  "numMatches": 1,
  "originalSelection": "more formatt",
  "pos": undefined,
  "step": Object {
    "from": 18,
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 30,
  },
}
`;

exports[`RendererActions applyAnnotation should apply annotation to the nested media 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "text": "some plain text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "marks": Array [
              Object {
                "type": "em",
              },
              Object {
                "type": "strong",
              },
              Object {
                "type": "underline",
              },
            ],
            "text": "more formatted text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "attrs": Object {
          "layout": "center",
          "width": 426,
          "widthType": "pixel",
        },
        "content": Array [
          Object {
            "attrs": Object {
              "alt": "568c02f0-5949-4465-8f43-e7f9b1f7ead5.png",
              "collection": "MediaServicesSample",
              "height": 500,
              "id": "6ee23984-95e4-4e9c-bff3-3723de5db792",
              "type": "file",
              "width": 500,
            },
            "type": "media",
          },
          Object {
            "content": Array [
              Object {
                "text": "cute dog",
                "type": "text",
              },
            ],
            "type": "caption",
          },
        ],
        "type": "mediaSingle",
      },
      Object {
        "attrs": Object {
          "isNumberColumnEnabled": false,
          "layout": "default",
          "localId": "709775b2-c4ad-4b47-bb63-023bfc655bb4",
          "width": 760,
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "layout": "center",
                      "width": 426,
                      "widthType": "pixel",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "alt": "catt.jpeg",
                          "collection": "MediaServicesSample",
                          "height": 1194,
                          "id": "e407b8a4-edb3-42d2-8425-7aa022c815c0",
                          "type": "file",
                          "width": 2121,
                        },
                        "marks": Array [
                          Object {
                            "attrs": Object {
                              "annotationType": "inlineComment",
                              "id": "<<<ANNOTATION-ID>>>",
                            },
                            "type": "annotation",
                          },
                        ],
                        "type": "media",
                      },
                      Object {
                        "content": Array [
                          Object {
                            "text": "cute cat",
                            "type": "text",
                          },
                        ],
                        "type": "caption",
                      },
                    ],
                    "type": "mediaSingle",
                  },
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": undefined,
  "matchIndex": 0,
  "numMatches": 0,
  "originalSelection": "",
  "pos": 61,
  "step": Object {
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "pos": 61,
    "stepType": "addNodeMark",
  },
}
`;

exports[`RendererActions applyAnnotation should apply annotation to the plain text 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "marks": Array [
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "text": "some pla",
            "type": "text",
          },
          Object {
            "text": "in text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "marks": Array [
              Object {
                "type": "em",
              },
              Object {
                "type": "strong",
              },
              Object {
                "type": "underline",
              },
            ],
            "text": "more formatted text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "attrs": Object {
          "layout": "center",
          "width": 426,
          "widthType": "pixel",
        },
        "content": Array [
          Object {
            "attrs": Object {
              "alt": "568c02f0-5949-4465-8f43-e7f9b1f7ead5.png",
              "collection": "MediaServicesSample",
              "height": 500,
              "id": "6ee23984-95e4-4e9c-bff3-3723de5db792",
              "type": "file",
              "width": 500,
            },
            "type": "media",
          },
          Object {
            "content": Array [
              Object {
                "text": "cute dog",
                "type": "text",
              },
            ],
            "type": "caption",
          },
        ],
        "type": "mediaSingle",
      },
      Object {
        "attrs": Object {
          "isNumberColumnEnabled": false,
          "layout": "default",
          "localId": "709775b2-c4ad-4b47-bb63-023bfc655bb4",
          "width": 760,
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "layout": "center",
                      "width": 426,
                      "widthType": "pixel",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "alt": "catt.jpeg",
                          "collection": "MediaServicesSample",
                          "height": 1194,
                          "id": "e407b8a4-edb3-42d2-8425-7aa022c815c0",
                          "type": "file",
                          "width": 2121,
                        },
                        "type": "media",
                      },
                      Object {
                        "content": Array [
                          Object {
                            "text": "cute cat",
                            "type": "text",
                          },
                        ],
                        "type": "caption",
                      },
                    ],
                    "type": "mediaSingle",
                  },
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": undefined,
  "matchIndex": 0,
  "numMatches": 1,
  "originalSelection": "some pla",
  "pos": undefined,
  "step": Object {
    "from": 0,
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 9,
  },
}
`;

exports[`RendererActions applyAnnotation should apply annotation to the top-level media 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "text": "some plain text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "marks": Array [
              Object {
                "type": "em",
              },
              Object {
                "type": "strong",
              },
              Object {
                "type": "underline",
              },
            ],
            "text": "more formatted text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "attrs": Object {
          "layout": "center",
          "width": 426,
          "widthType": "pixel",
        },
        "content": Array [
          Object {
            "attrs": Object {
              "alt": "568c02f0-5949-4465-8f43-e7f9b1f7ead5.png",
              "collection": "MediaServicesSample",
              "height": 500,
              "id": "6ee23984-95e4-4e9c-bff3-3723de5db792",
              "type": "file",
              "width": 500,
            },
            "marks": Array [
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "type": "media",
          },
          Object {
            "content": Array [
              Object {
                "text": "cute dog",
                "type": "text",
              },
            ],
            "type": "caption",
          },
        ],
        "type": "mediaSingle",
      },
      Object {
        "attrs": Object {
          "isNumberColumnEnabled": false,
          "layout": "default",
          "localId": "709775b2-c4ad-4b47-bb63-023bfc655bb4",
          "width": 760,
        },
        "content": Array [
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "attrs": Object {
                      "layout": "center",
                      "width": 426,
                      "widthType": "pixel",
                    },
                    "content": Array [
                      Object {
                        "attrs": Object {
                          "alt": "catt.jpeg",
                          "collection": "MediaServicesSample",
                          "height": 1194,
                          "id": "e407b8a4-edb3-42d2-8425-7aa022c815c0",
                          "type": "file",
                          "width": 2121,
                        },
                        "type": "media",
                      },
                      Object {
                        "content": Array [
                          Object {
                            "text": "cute cat",
                            "type": "text",
                          },
                        ],
                        "type": "caption",
                      },
                    ],
                    "type": "mediaSingle",
                  },
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          Object {
            "content": Array [
              Object {
                "attrs": Object {},
                "content": Array [
                  Object {
                    "content": Array [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": undefined,
  "matchIndex": 0,
  "numMatches": 0,
  "originalSelection": "",
  "pos": 39,
  "step": Object {
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "pos": 39,
    "stepType": "addNodeMark",
  },
}
`;

exports[`RendererActions deleteAnnotation should delete the annotation on media with provided ID 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "attrs": Object {
          "alt": "dog-puppy.jpeg",
          "collection": "contentId-3533084563",
          "height": 1197,
          "id": "c7ef3a01-d45c-41e3-a662-67ccb54d088f",
          "type": "file",
          "width": 1200,
        },
        "type": "media",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "step": Object {
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "pos": 0,
    "stepType": "removeNodeMark",
  },
}
`;

exports[`RendererActions deleteAnnotation should delete the annotation when spanning multiple nodes 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "text": "Hello!",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      Object {
        "content": Array [
          Object {
            "text": "Hello!",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "step": Object {
    "from": 1,
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "removeMark",
    "to": 15,
  },
}
`;

exports[`RendererActions deleteAnnotation should delete the annotation with provided ID 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "text": "Hello!",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "step": Object {
    "from": 1,
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "removeMark",
    "to": 7,
  },
}
`;

exports[`RendererActions deleteAnnotation should delete the annotation with provided ID without touching overlapping marks 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "marks": Array [
              Object {
                "attrs": Object {
                  "href": "https://www.atlassian.com",
                },
                "type": "link",
              },
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": "Hello, ",
            "type": "text",
          },
          Object {
            "marks": Array [
              Object {
                "attrs": Object {
                  "href": "https://www.atlassian.com",
                },
                "type": "link",
              },
              Object {
                "type": "strong",
              },
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "3bac13b6-b121-457e-adbc-a447ad21b7bd",
                },
                "type": "annotation",
              },
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": "World!",
            "type": "text",
          },
          Object {
            "marks": Array [
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "3bac13b6-b121-457e-adbc-a447ad21b7bd",
                },
                "type": "annotation",
              },
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": " Look I can do ",
            "type": "text",
          },
          Object {
            "marks": Array [
              Object {
                "type": "em",
              },
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "3bac13b6-b121-457e-adbc-a447ad21b7bd",
                },
                "type": "annotation",
              },
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": "italic",
            "type": "text",
          },
          Object {
            "marks": Array [
              Object {
                "type": "em",
              },
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": " ",
            "type": "text",
          },
          Object {
            "marks": Array [
              Object {
                "type": "em",
              },
              Object {
                "type": "strong",
              },
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": ", strong ",
            "type": "text",
          },
          Object {
            "marks": Array [
              Object {
                "type": "em",
              },
              Object {
                "type": "strong",
              },
              Object {
                "type": "underline",
              },
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": "and underlined text!",
            "type": "text",
          },
          Object {
            "marks": Array [
              Object {
                "attrs": Object {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": " and",
            "type": "text",
          },
          Object {
            "text": " action mark",
            "type": "text",
          },
          Object {
            "text": " and invalid action mark",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "step": Object {
    "from": 15,
    "mark": Object {
      "attrs": Object {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "removeMark",
    "to": 25,
  },
}
`;
